good final copy before lunch and before attempting to fixing alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,6 @@
   text-align: center;
 }
 
-.projpic {
-
-}
 
 body {
   background-color: honeydew;
@@ -65,9 +62,6 @@ body {
   text-align: center;
 }
 
-.faves img {
-
-}
 
 .faves ol{
   padding-left: 14px;
